--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -82,6 +82,8 @@
       placeholder="Numero de operarios"
       name="numero_ops"
       formControlName="numero_ops">
+      <button type="button" (click)="setOperariosTemporada(1)">TEMPORADA BAJA</button>
+      <button type="button" (click)="setOperariosTemporada(2)">TEMPORADA ALTA</button>
   </div>  
   <div>
     <label for="observacion_ayto">Ayuntamiento</label>
