--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -4,6 +4,10 @@
 <nav>
   <a [routerLink]="['/dash/operarios']">Operarios</a> 
   <a [routerLink]="['/dash/limpieza']">Limpieza</a> 
-  <a [routerLink]="['/dash/imformeslimpieza']">Imformes Limpieza</a>   
+  <a [routerLink]="['/dash/imformeslimpieza']">Imformes</a>  
+  <a [routerLink]="['/dash/analisislimpieza']">Analisis</a>
+  <a [routerLink]="['/dash/mantenimiento']">Mantenimiento</a>  
+  <a [routerLink]="['/dash/taller']">Taller</a>
+  <a [routerLink]="['/dash/hamacas']">Hamacas</a>  
   <a href="" (click)="logOut()">Salir</a>
 </nav>
