--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -21,6 +21,7 @@
           </select>
         </div>        
         <button type="button" (click)="abreRes(fecha.value, turno.value, municipio.value)">Abrir Informe Diario</button>
+        <button type="button" (click)="abreMes(fecha.value, turno.value, municipio.value)">Abrir Informe Mensual</button>
       </div>      
     </div>
   </div>
