--- a/src/app/operarios/operarios-lista/operarios-lista.component.html
+++ b/src/app/operarios/operarios-lista/operarios-lista.component.html
@@ -1,7 +1,10 @@
+<p>
+  Listado de operarios
+</p>
 <nav>
   <a [routerLink]="['detalle']">Nuevo</a> 
 </nav>
-
+<br>
 <div>
   <div *ngFor="let operario of listaOperarios">
     <div>
