--- a/src/app/informes-lim/resumen-mes/resumen-mes.component.html
+++ b/src/app/informes-lim/resumen-mes/resumen-mes.component.html
@@ -1,3 +1,11 @@
-<p>
-  resumen-mes works!
-</p>
+<h3>PARTES MENSUAL LIMPIEZA DE PLAYAS. {{ municipio | uppercase }}. MES {{ month }} DE AÑO {{ year }}</h3>
+<h4>TURNO {{ turno | uppercase }}</h4>
+<div>
+  <div *ngFor="let item of partes; let i=index">
+    <div>
+      <a>{{ item.fecha }}</a>
+      <div>{{ item.observacion_ayto }}</div>
+    </div>
+  </div>
+</div>
+RA. BENIDORM. SL
