--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -4,7 +4,7 @@
 <nav>
   <a [routerLink]="['/dash/operarios']">Operarios</a> 
   <a [routerLink]="['/dash/limpieza']">Limpieza</a> 
-  <a [routerLink]="['/dash/imformeslimpieza']">Imformes</a>  
+  <a [routerLink]="['/dash/informeslimpieza']">Informes</a>  
   <a [routerLink]="['/dash/analisislimpieza']">Analisis</a>
   <a [routerLink]="['/dash/mantenimiento']">Mantenimiento</a>  
   <a [routerLink]="['/dash/taller']">Taller</a>
