--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -5,7 +5,7 @@
   <a [routerLink]="['/dash/operarios']">Operarios</a> 
   <a [routerLink]="['/dash/limpieza']">Limpieza</a> 
   <a [routerLink]="['/dash/informeslimpieza']">Informes</a>  
-  <a [routerLink]="['/dash/analisislimpieza']">Analisis</a>
+  <a [routerLink]="['/dash/analisis']">Analisis</a>
   <a [routerLink]="['/dash/mantenimiento']">Mantenimiento</a>  
   <a [routerLink]="['/dash/taller']">Taller</a>
   <a [routerLink]="['/dash/hamacas']">Hamacas</a>  
