--- a/src/app/analisis/pesos-pla/pesos-pla.component.html
+++ b/src/app/analisis/pesos-pla/pesos-pla.component.html
@@ -1,3 +1,8 @@
 <p>
-  pesos-pla works!
+  TOTAL PESOS PLAYA {{ lugar }} EN {{ municipio }}
 </p>
+RSU MANUAL: {{ pesos?.total_rsu_manual }}
+RSU TRACTOR: {{ pesos?.total_rsu_criba }}
+SELECTIVO: {{ pesos?.total_selectivo }}
+ALGAS TEORICAS: {{ pesos?.total_algas_teoricas }}
+ALGAS PESADAS: {{ pesos?.total_algas_pesadas }}
