--- a/src/app/analisis/estadisticas-pla/estadisticas-pla.component.html
+++ b/src/app/analisis/estadisticas-pla/estadisticas-pla.component.html
@@ -3,5 +3,5 @@ ESTADISTICAS TOTALES PLAYA {{ lugar }} DE {{ municipio }}
 </p>
 
 <div *ngFor="let estadistica of estadisticas">
-{{ estadistica._id }} número de incidencias: {{ estadistica.count }}
+{{ estadistica._id }} - {{ estadistica.count }}
 </div>
