--- a/src/app/analisis/pesos-pla/pesos-pla.component.html
+++ b/src/app/analisis/pesos-pla/pesos-pla.component.html
@@ -1,8 +1,8 @@
 <p>
   TOTAL PESOS PLAYA {{ lugar }} EN {{ municipio }}
 </p>
-RSU MANUAL: {{ pesos?.total_rsu_manual }}
-RSU TRACTOR: {{ pesos?.total_rsu_criba }}
-SELECTIVO: {{ pesos?.total_selectivo }}
-ALGAS TEORICAS: {{ pesos?.total_algas_teoricas }}
-ALGAS PESADAS: {{ pesos?.total_algas_pesadas }}
+RSU MANUAL: {{ pesos?.total_rsu_manual }} <br>
+RSU CRIBADORA: {{ pesos?.total_rsu_criba }} <br>
+SELECTIVO: {{ pesos?.total_selectivo }} <br>
+ALGAS TEORICAS: {{ pesos?.total_algas_teoricas }} <br>
+ALGAS PESADAS: {{ pesos?.total_algas_pesadas }} <br>
