--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -1,4 +1,7 @@
-  <div>
+<div>
+  <a href="" (click)="oculta($event)">{{ textoOculta }}</a>
+</div>  
+<div *ngIf="visible">
     <br>
     <div>
       <div>
