--- a/src/app/analisis/estadisticas-mun/estadisticas-mun.component.html
+++ b/src/app/analisis/estadisticas-mun/estadisticas-mun.component.html
@@ -3,5 +3,5 @@ ESTADISTICAS TOTALES PLAYAS {{ municipio }}
 </p>
 
 <div *ngFor="let estadistica of estadisticas">
-{{ estadistica._id }} número de incidencias: {{ estadistica.count }}
+{{ estadistica._id }} - {{ estadistica.count }}
 </div>
