--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -5,17 +5,12 @@
     <br>
     <div>
       <div>
+        <p>
+          Informe diario por dia y municipio
+        </p>
         <div>
           <label>Fecha</label>
           <input type="date" name="fecha" placeholder="dia resumen" [(ngModel)]="fecha">         
-        </div>
-        <div>
-          <label>Turno</label>
-          <select name="turno" #turno>
-            <option>Mañana</option>
-            <option>Tarde</option>
-            <option>Noche</option>    
-          </select>
         </div>
         <div>
           <label>Municipio</label>
@@ -24,7 +19,10 @@
             <option>Finestrat</option>    
           </select>
         </div>        
-        <button type="button" (click)="abreRes(fecha, turno.value, municipio.value)">Abrir Informe Diario</button>
+        <button type="button" (click)="abreRes(fecha, municipio.value)">Abrir Informe Diario</button>
+        <p>
+            Informe mensual por dia, turno y playa
+        </p>
         <div>
           <label>Playa</label>
           <select name="lugar" #lugar>
@@ -32,7 +30,15 @@
             <option value="Poniente y Mal Pas">Poniente y Mal Pas</option>
             <option value="Finestrat">Finestrat</option>     
           </select>
-        </div>          
+        </div>  
+        <div>
+          <label>Turno</label>
+          <select name="turno" #turno>
+            <option>Mañana</option>
+            <option>Tarde</option>
+            <option>Noche</option>    
+          </select>
+        </div>                
         <button type="button" (click)="abreMes(fecha, turno.value, lugar.value, municipio.value)">Abrir Informe Mensual</button>
       </div>      
     </div>
