--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <h2>ACCESO A LA APLICACION GESTION LIMPIEZA DE PLAYAS. RA BENIDORM. 2017</h2>
+    <h4>ACCESO A LA APLICACION GESTION LIMPIEZA DE PLAYAS. RA BENIDORM. 2017</h4>
   </div>
   <div></div>
   <div>
@@ -23,9 +23,7 @@
     <div *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Campo clave necesario.</div>
     <div *ngIf="errorPass" class="ui yellow message">Clave incorrecta.</div>
   </div>
-  <button type="submit">Aceptar</button>
+  <button class="btn btn-primary" type="submit">Aceptar</button>
 </form>
-
-<div>
-  <h3>Nueva version 1.1.x en desarrollo</h3> v. 2017-08-19
-</div>
+<br>
+<alert type="success"><h5>Nueva version 1.1.x en desarrollo</h5> v. 2017-08-28</alert>
