--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -228,8 +228,8 @@
       formControlName="bolsas"> 
   </div>
   <div>
-    <button type="submit" [disabled]="!parteForm.valid">GUARDAR</button>
-    <button type="button" (click)="onCancelar()">CANCELAR</button>
-    <button type="button" (click)="onBorrar(parteForm)" [disabled]="!enEdicion">BORRAR</button>
+    <button class="btn btn-success" type="submit" [disabled]="!parteForm.valid">GUARDAR</button>
+    <button class="btn btn-warning" type="button" (click)="onCancelar()">CANCELAR</button>
+    <button class="btn btn-danger" type="button" (click)="onBorrar(parteForm)" [disabled]="!enEdicion">BORRAR</button>
   </div>    
 </form>
