--- a/src/app/informes-lim/resumen-mes/resumen-mes.component.html
+++ b/src/app/informes-lim/resumen-mes/resumen-mes.component.html
@@ -1,10 +1,10 @@
 <h4>PARTES MENSUAL LIMPIEZA DE {{ lugar | uppercase }}. {{ municipio | uppercase }}. MES {{ month }} AÑO {{ year }}</h4>
-<h5>TURNO {{ turno | uppercase }}</h5>
 <div>
-  <div *ngFor="let item of partes; let i=index">
-    <div>
-      <div>{{ item.fecha }} - {{ item.observacion_ayto | uppercase}}</div>
-    </div>
+  <div *ngFor="let item of resumen; let i=index">
+      <div><strong>{{ item._id }}</strong></div>
+      <div *ngFor="let observa of item.observaciones; let i=index">
+       <div>{{ observa.observacion_ayto | uppercase }}</div>
+      </div>
   </div>
 </div>
 <br>
