--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -5,7 +5,7 @@
     <br>
     <div>
       <div>
-        <p class="bg-primary">
+        <p>
           Informe diario por dia y municipio
         </p>
         <div>
@@ -19,9 +19,9 @@
             <option>Finestrat</option>    
           </select>
         </div>        
-        <button class="btn btn-primary" type="button" (click)="abreRes(fecha, municipio.value)">Abrir Informe Diario</button>
+        <button class="ui blue button" type="button" (click)="abreRes(fecha, municipio.value)">Abrir Informe Diario</button>
         <p>.......</p>
-        <p class="bg-info">
+        <p>
             Informe mensual por dia, turno y playa
         </p>
         <div>
@@ -40,7 +40,7 @@
             <option>Noche</option>    
           </select>
         </div>                
-        <button class="btn btn-info" type="button" (click)="abreMes(fecha, turno.value, lugar.value, municipio.value)">Abrir Informe Mensual</button>
+        <button class="ui blue button" type="button" (click)="abreMes(fecha, turno.value, lugar.value, municipio.value)">Abrir Informe Mensual</button>
       </div>      
     </div>
   </div>
