--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,11 @@
 <div>
-  <div>
-    <h4>ACCESO A LA APLICACION GESTION LIMPIEZA DE PLAYAS. RA BENIDORM. 2017</h4>
-  </div>
-  <div></div>
-  <div>
-    <div>
-      Introduzca clave de acceso
-    </div>
+  <div class="ui massive message">
+    ACCESO A LA APLICACION GESTION LIMPIEZA DE PLAYAS. RA BENIDORM. 2017
   </div>
 </div>
 
-<form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit(loginForm)">
-  <div>
+<form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit(loginForm)" class="ui form">
+  <div class="inline field">
     <label>
       Clave
     </label>
@@ -19,11 +13,22 @@
       type="password"
       placeholder="Introduce clave"
       name="password"
-      formControlName="password">
-    <div *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Campo clave necesario.</div>
-    <div *ngIf="errorPass" class="ui yellow message">Clave incorrecta.</div>
+      formControlName="password">   
+    <sui-message class="attached warning" [isDismissable]="false" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">
+        <div class="header">
+            Atención
+        </div>
+        <p>Campo clave necesario..</p>
+    </sui-message>    
+    <div *ngIf="errorPass" class="ui negative message">Clave incorrecta.</div>
   </div>
-  <button class="btn btn-primary" type="submit">Aceptar</button>
+  <button class="ui button" type="submit">Aceptar</button>
 </form>
 <br>
-<alert type="success"><h5>Nueva version 1.1.x en desarrollo</h5> v. 2017-09-04</alert>
+
+<sui-message class="success">
+  <div class="header">
+      Nota informativa!
+  </div>
+  <p>Nueva version 1.1.x en desarrollo v. 2017-09-08</p>
+</sui-message>
