--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -5,14 +5,21 @@
 <form novalidate [formGroup]="parteForm" (ngSubmit)="onSubmit(parteForm)" class="ui form">
   <div class="field">
     <label for="municipio">Municipio</label>
-    <select
+    <sui-select
       placeholder="Introduce municipio"
       name="municipio"
-      formControlName="municipio">
-      <option value="Benidorm" selected="selected">Benidorm</option>
-      <option value="Finestrat">Finestrat</option>    
-    </select>
-    <div *ngIf="parteForm.controls['municipio'].hasError('required') && parteForm.controls['municipio'].touched">Campo municipio necesario.</div>    
+      formControlName="municipio"
+      class="ui fluid selection dropdown"
+      suiDropdown>
+      <sui-select-option value="Benidorm" selected="selected">Benidorm</sui-select-option>
+      <sui-select-option value="Finestrat">Finestrat</sui-select-option>    
+    </sui-select>
+    <sui-message class="attached warning" [isDismissable]="false" *ngIf="parteForm.controls['municipio'].hasError('required') && parteForm.controls['municipio'].touched">
+      <div class="header">
+          Atención
+      </div>
+      <p>Campo municipio necesario...</p>
+    </sui-message> 
   </div>   
   <div class="field">
     <label for="fecha">Fecha</label>
@@ -21,60 +28,85 @@
       placeholder="Introduce fecha"
       name="fecha"
       formControlName="fecha">
-    <div *ngIf="parteForm.controls['fecha'].hasError('required') && parteForm.controls['fecha'].touched">Campo fecha necesario.</div>
+      <sui-message class="attached warning" [isDismissable]="false" *ngIf="parteForm.controls['fecha'].hasError('required') && parteForm.controls['fecha'].touched">
+        <div class="header">
+            Atención
+        </div>
+        <p>Campo fecha necesario...</p>
+      </sui-message>       
   </div>
   <div class="field">
     <label for="lugar">Playa</label>
-    <select
+    <sui-select
       placeholder="Introduce playa"
       name="lugar"
-      formControlName="lugar">
-      <option value="Levante y Calas">Levante y Calas</option>
-      <option value="Poniente y Mal Pas">Poniente y Mal Pas</option>
-      <option value="Finestrat">Finestrat</option>      
-    </select>
-    <div *ngIf="parteForm.controls['lugar'].hasError('required') && parteForm.controls['lugar'].touched">Campo playa necesario.</div>    
+      formControlName="lugar"
+      class="ui fluid selection dropdown">
+      <sui-select-option value="Levante y Calas">Levante y Calas</sui-select-option>
+      <sui-select-option value="Poniente y Mal Pas">Poniente y Mal Pas</sui-select-option>
+      <sui-select-option value="Finestrat">Finestrat</sui-select-option>      
+    </sui-select>
+    <sui-message class="attached warning" [isDismissable]="false" *ngIf="parteForm.controls['lugar'].hasError('required') && parteForm.controls['lugar'].touched">
+      <div class="header">
+          Atención
+      </div>
+      <p>Campo playa necesario...</p>
+    </sui-message>     
   </div> 
   <div class="field">
     <label for="turno">Turno</label>
-    <select
+    <sui-select
       placeholder="Introduce turno"
       name="turno"
-      formControlName="turno">
-      <option value="Mañana">Mañana</option>
-      <option value="Tarde">Tarde</option>
-      <option value="Noche">Noche</option>
-    </select>
-    <div *ngIf="parteForm.controls['turno'].hasError('required') && parteForm.controls['turno'].touched">Campo turno necesario.</div>    
+      formControlName="turno"
+      class="ui fluid selection dropdown">
+      <sui-select-option value="Mañana">Mañana</sui-select-option>
+      <sui-select-option value="Tarde">Tarde</sui-select-option>
+      <sui-select-option value="Noche">Noche</sui-select-option>
+    </sui-select>
+    <sui-message class="attached warning" [isDismissable]="false" *ngIf="parteForm.controls['turno'].hasError('required') && parteForm.controls['turno'].touched">
+      <div class="header">
+          Atención
+      </div>
+      <p>Campo turno necesario...</p>
+    </sui-message>     
   </div>  
   <div class="field">
     <label for="tipo">Tipo de limpieza</label>
-    <select
+    <sui-select
       placeholder="Introduce tipo"
       name="tipo"
-      formControlName="tipo">
-      <option value="Manual">Manual</option>
-      <option value="Tractor">Tractor</option>
-    </select>
-    <div *ngIf="parteForm.controls['tipo'].hasError('required') && parteForm.controls['tipo'].touched">Campo tipo necesario.</div>    
+      formControlName="tipo"
+      class="ui fluid selection dropdown">
+      <sui-select-option value="Manual">Manual</sui-select-option>
+      <sui-select-option value="Tractor">Tractor</sui-select-option>
+    </sui-select>
+    <sui-message class="attached warning" [isDismissable]="false" *ngIf="parteForm.controls['tipo'].hasError('required') && parteForm.controls['tipo'].touched">
+      <div class="header">
+          Atención
+      </div>
+      <p>Campo tipo necesario...</p>
+    </sui-message>         
   </div>   
   <div class="field">
     <label for="operario">Conductor</label>
-    <select
+    <sui-select
       placeholder="Introduce conductor"
       name="operario"
-      formControlName="operario">    
-      <option *ngFor="let unOperario of listaOperarios; let i=index" [ngValue]="unOperario.nombre">{{ unOperario.nombre }}</option>
-    </select>    
+      formControlName="operario"
+      class="ui fluid selection dropdown">    
+      <sui-select-option *ngFor="let unOperario of listaOperarios; let i=index" [value]="unOperario.nombre">{{ unOperario.nombre }}</sui-select-option>
+    </sui-select>    
   </div>   
   <div class="field">
     <label for="vehiculo">Vehiculo</label>
-    <select
+    <sui-select
       placeholder="Introduce vehiculo"
       name="vehiculo"
-      formControlName="vehiculo">
-      <option *ngFor="let unVehiculo of listaVehiculos; let i=index" [ngValue]="unVehiculo.matricula">{{ unVehiculo.matricula }} - {{ unVehiculo.nombre }}</option>    
-    </select>
+      formControlName="vehiculo"
+      class="ui fluid selection dropdown">
+      <sui-select-option *ngFor="let unVehiculo of listaVehiculos; let i=index" [value]="unVehiculo.matricula">{{ unVehiculo.matricula }} - {{ unVehiculo.nombre }}</sui-select-option>    
+    </sui-select>
   </div>   
   <div class="field">
     <label for="numero_ops">Numero de operarios</label>
